tests/scan/fixtures/validation/negative/clean_go_clean-api-handler/go.mod
module github.com/example/clean-api-handler
go 1.21
